[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://DeliusUnicase-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game.tscn" type="PackedScene" id=3]
[ext_resource path="res://time.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = true
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=1]

size = 128
use_mipmaps = true
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="main" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="bg" type="Polygon2D" parent="." index="0"]

polygon = PoolVector2Array( -1.29041, 21.7768, 1021.71, 23.1372, 1023.07, 583.611, -1.29041, 583.611 )
uv = PoolVector2Array(  )
color = Color( 0.250671, 0.578125, 0.532077, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="win" type="Node" parent="." index="1"]

editor/display_folded = true

[node name="player" type="Label" parent="win" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 102.0
margin_top = 258.0
margin_right = 429.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.239216, 0.313726, 0.313726, 1 )
text = "You win!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="enemy" type="Label" parent="win" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 613.0
margin_top = 257.0
margin_right = 940.0
margin_bottom = 339.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.239216, 0.313726, 0.313726, 1 )
text = "You win!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="game" parent="." index="2" instance=ExtResource( 3 )]

editor/display_folded = true
_sections_unfolded = [ "Pause", "Z Index" ]

[node name="time" type="Node" parent="." index="3"]

pause_mode = 2
script = ExtResource( 4 )
_sections_unfolded = [ "Pause" ]

[node name="label" type="Label" parent="time" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 448.0
margin_top = 221.0
margin_right = 576.0
margin_bottom = 385.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Pause", "Rect", "custom_fonts" ]

[node name="countdown" type="Timer" parent="time/label" index="0"]

pause_mode = 2
process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[connection signal="done" from="." to="time" method="_on_main_done"]

[connection signal="enemy_goal" from="game" to="." method="_on_game_enemy_goal"]

[connection signal="paused" from="game" to="time" method="_on_game_paused"]

[connection signal="paused" from="game" to="." method="_on_game_paused"]

[connection signal="player_goal" from="game" to="." method="_on_game_player_goal"]

[connection signal="finished" from="game/hit" to="." method="_on_hit_finished"]

[connection signal="unpause" from="time" to="." method="_on_time_unpause"]

[connection signal="timeout" from="time/label/countdown" to="time" method="_on_countdown_timeout"]


[editable path="game"]
